more subtle fix to improve text readability

--- a/_includes/index.scss
+++ b/_includes/index.scss
@@ -137,12 +137,7 @@ section {
 }
 
 .intro .text {
-	background-color: rgba(0,0,0,.3);
-	padding: 1em 1em 1px;
-	border-radius: 1em;
-	p {
-		margin: 0 0 1em;
-	}
+	text-shadow: 1px 1px 0px black;
 }
 
 .testimonials .wrap {
